--- a/webapp/WEB-INF/templates/admin/search/search_indexation_logs.html
+++ b/webapp/WEB-INF/templates/admin/search/search_indexation_logs.html
@@ -3,7 +3,7 @@
 		<@box color='danger'>
 			<@boxHeader title='#i18n{portal.search.indexer_logs.titleIndexerLogs}' />
 			<@boxBody>
-				<pre class="">${logs}</pre>
+				<div class="log">${logs}</div>
 				<@aButton href="jsp/admin/search/ManageSearchIndexation.jsp" buttonIcon='times' title='#i18n{portal.util.labelBack}'  size='' color='btn-secondary' />
 			</@boxBody>
 		</@box>
