--- a/webapp/WEB-INF/templates/admin/search/manage_search_indexation.html
+++ b/webapp/WEB-INF/templates/admin/search/manage_search_indexation.html
@@ -1,39 +1,271 @@
 <@row>
-	<@columns>
-		<@box color='danger'>
-			<@boxHeader title='#i18n{portal.search.manage_indexer.labelIndexersList}' boxTools=true>
-				<@tform method='get' name='doIndexing' action='jsp/admin/search/DoIndexing.jsp' class='pull-right'>
-					<input type="hidden" name="token" value="${token}">
-					<@button type='submit' buttonIcon='repeat' title='#i18n{portal.search.manage_indexer.buttonDoIndex}' name='total' size='' color='primary' />
-					<@button type='submit' buttonIcon='refresh' title='#i18n{portal.search.manage_indexer.buttonDoIncrementalIndex}' name='incremental' size='' color='primary' />
-				</@tform>
-			</@boxHeader>
-		<@boxBody>
-			<@table>
-					<tr>
-						<th>#i18n{portal.search.manage_indexer.columnIndexerName}</th>
-						<th>#i18n{portal.search.manage_indexer.columnIndexerVersion}</th>
-						<th>#i18n{portal.search.manage_indexer.columnIndexerDescription}</th>
-					</tr>
-					<#list indexers_list as indexer>
-						<tr>
-							<td>
-								<#if indexer.enable>
-									<@tag color='success' title='${indexer.name} #i18n{portal.search.manage_indexer.IndexerEnable}'>
-										<@icon style='check' />
-									</@tag>
-								<#else>
-									<@tag color='important' title='${indexer.name} #i18n{portal.search.manage_indexer.IndexerDisable}'>
-										<@icon style='times' />
-									</@tag>
-								</#if>&nbsp;${indexer.name}
-							</td>
-							<td>${indexer.version}</td>
-							<td>${indexer.description}</td>
-						</tr>
-					</#list>
-				</@table>
-			</@boxBody>
-		</@box>
-	</@columns>
+    <@columns>
+        <@box color='danger'>
+            <@boxHeader title='#i18n{portal.search.manage_indexer.labelIndexersList}' boxTools=true>
+                <@tform method='get' name='doIndexing' action='jsp/admin/search/DoIndexing.jsp' class='pull-right'>
+                    <input type="hidden" id="indexingToken" name="token" value="${token}">
+                    <@button class="indexation_action" type='submit' buttonIcon='repeat'
+                        title='#i18n{portal.search.manage_indexer.buttonDoIndex}' name='indexation_mode' size=''
+                        value="full,All" />
+                    <@button class="indexation_action" type='submit' buttonIcon='refresh'
+                        title='#i18n{portal.search.manage_indexer.buttonDoIncrementalbyBulkIndex}'
+                        name='indexation_mode' size='' value="incremental_by_bulk,All" />
+                </@tform>
+            </@boxHeader>
+            <@boxBody>
+                <div class="progress hide" id="progressBar">
+                    <div id="prog-bar" class="progress-bar progress-bar-striped progress-bar-animated"
+                        role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%">
+                    </div>
+                </div>
+                <i id="loader" class="fa fa-spinner fa-pulse fa-3x fa-fw hide"
+                    style="font-size:36px;color:#007bff;"></i>
+                <div class="alert alert-success hide" id="alert_success_indexation" role="alert">
+                    <@icon style='check' class="text-success" /> Indexing Done !
+                </div>
+                <@table>
+                    <tr>
+                        <th>#i18n{portal.search.manage_indexer.columnIndexerName}</th>
+                        <th>#i18n{portal.search.manage_indexer.columnIndexerVersion}</th>
+                        <th>#i18n{portal.search.manage_indexer.columnIndexerDescription}</th>
+                        <th>#i18n{portal.search.manage_indexer.columnIndexerPathIndex}</th>
+                        <th id="button" class='hide'>button</th>
+                    </tr>
+                    <#list indexers_list as indexer>
+                        <tr class="indexer" indexer="${indexer.name}">
+                            <td>
+                                <#if indexer.enable>
+                                    <@tag color='success'
+                                        title='${indexer.name} #i18n{portal.search.manage_indexer.IndexerEnable}'>
+                                        <@icon style='check' />
+                                    </@tag>
+                                    <#else>
+                                        <@tag color='important'
+                                            title='${indexer.name} #i18n{portal.search.manage_indexer.IndexerDisable}'>
+                                            <@icon style='times' />
+                                        </@tag>
+                                </#if>&nbsp;${indexer.name}
+                            </td>
+                            <td>${indexer.version}</td>
+                            <td>${indexer.description}</td>
+                            <td>${indexer.pathIndex!''}</td>
+                            <td style="align-items: center;">
+                                <#if indexer.enable>
+                                    <div>
+                                        <@tform method='get' name='doIndexing' action='jsp/admin/search/DoIndexing.jsp'
+                                            class='pull-right'>
+                                            <input type="hidden" id="indexingToken" name="token" value="${token}">
+                                            <@button class="indexation_action" type='submit' buttonIcon='repeat'
+                                                title='#i18n{portal.search.manage_indexer.buttonDoIndex}'
+                                                name='indexation_mode' size='' value="full,${indexer.name}" />
+                                            <@button class="indexation_action" type='submit' buttonIcon='refresh'
+                                                title='#i18n{portal.search.manage_indexer.buttonDoIncrementalbyBulkIndex}'
+                                                name='indexation_mode' size=''
+                                                value="incremental_by_bulk,${indexer.name}" />
+                                        </@tform>
+                                    </div>
+                                </#if>
+                                <div id="button_${indexer.name}" class='buttonLogs hide'>
+                                    <@button class="btn1" buttonIcon='plus'
+                                        title='#i18n{portal.search.manage_indexer.buttonIndexerLog}' />
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan=4 id="logsHeader_${indexer.name}" class="logs hide">
+                                <div id="logHeader_${indexer.name}" class="log"></div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan=4 id="logs_${indexer.name}" class="logs hide">
+                                <div id="log_${indexer.name}" class="log" style="color: red;"></div>
+                            </td>
+                        </tr>
+                    </#list>
+                    <div id="General_logs" class="log hide"></div>
+                </@table>
+            </@boxBody>
+        </@box>
+    </@columns>
 </@row>
+<script>
+    $("#allLogs").hide();
+    var isIndexing = false;
+    var modeIndexation;
+    var i, j, errorIndexerLogs = "",
+        headerInfosIndexer = "",
+        headerInfosIndexers = "";
+    var doIndexingUrl = "jsp/admin/search/DoIndexing.jsp";
+    var getIndexingLogsUrl = "jsp/admin/search/GetIndexingLogs.jsp";
+
+
+    $(".btn1").click(function (e) {
+        e.preventDefault();
+        var tr = this.closest('tr');
+        var IndexerName = tr.getAttribute('indexer')
+        document.getElementById("logsHeader_" + IndexerName).classList.toggle('hide');
+        document.getElementById("logs_" + IndexerName).classList.toggle('hide');
+    });
+
+    function makeAjaxCall(url, methodType, dataType, callback) {
+        return $.ajax({
+            url: url,
+            method: methodType,
+            dataType: dataType
+        });
+    }
+
+    
+
+    function initIndexation() {
+        isIndexing = true;
+        $('.indexation_action').attr("disabled", true);
+        $("#alert_success_indexation").addClass("hide")
+        $("#progressBar").removeClass('hide');
+        $("#loader").removeClass('hide');
+        $("#button").removeClass('hide');
+        $(".buttonLogs").addClass('hide');
+        $(".log").empty();
+        $("#prog-bar").width(0+"%");
+        $("#prog-bar").attr("aria-valuenow", 0);
+        $("#prog-bar").text(0+"%");
+    }
+
+
+    $('.indexation_action').click(function (e) {
+        e.preventDefault();
+        initIndexation();
+        makeAjaxCall(doIndexingUrl + "?indexation_mode=" + $(this).val(), "GET", "html").then(function (
+            response) {
+            getIndexingLogs()
+        });
+        pause(100);
+        getIndexingLogs();
+    });
+
+    function getIndexingLogs() {
+        makeAjaxCall(getIndexingLogsUrl, "GET", "json").then(function (response) {
+            logsIndexers(response);
+            if (isIndexing) {
+                getIndexingLogs();
+            }
+        });
+    }
+    
+
+    function logsIndexers(response) {
+        const indexers = document.querySelectorAll('.indexer');
+        indexers.forEach(function (el) {
+            const indexer = el.getAttribute('indexer');
+            response.forEach(function (indexerEl) {
+                if (indexerEl.hasOwnProperty("indexerName")) {
+                    headerInfosIndexer  = ""; errorIndexerLogs = "";
+                    $("#button_"+ indexerEl.indexerName).removeClass('hide');
+                    headerInfosIndexer += "<strong>Indexation Mode</strong> : &nbsp;" + indexerEl
+                        .indexationMode +
+                        "&nbsp;&nbsp; <br>";
+                    headerInfosIndexer += "<strong>Number of Items to Process</strong> : &nbsp;" +
+                        indexerEl
+                        .numberOfItemsToProcess +
+                        "&nbsp;&nbsp; <br>";
+                    headerInfosIndexer += "<strong>Number of Items Processed</strong> : &nbsp;" +
+                        indexerEl
+                        .numberOfItemsProcessed +
+                        "&nbsp;&nbsp; <br>";
+                    headerInfosIndexer += "<strong>Duration of Treatment</strong> : &nbsp;" + indexerEl
+                        .treatmentDurationMs +
+                        " &nbsp; ms &nbsp; <br>";
+                    if (indexerEl.numberOfItemsFailed > 0) {
+                        headerInfosIndexer += "<strong>Number Of Errors</strong> : &nbsp;" + indexerEl
+                            .numberOfItemsFailed +
+                            "&nbsp;&nbsp; <br> ";
+                    }
+                    if (indexerEl.updatedIndexer == false) {
+                        headerInfosIndexer += "<strong>Indexer is up to date</strong> : &nbsp;" +
+                            indexerEl
+                            .updatedIndexer +
+                            "&nbsp;&nbsp; <br> ";
+                        headerInfosIndexer += "No progress bar/no treatment by Bulk for Items<br> ";
+                    }
+                    for (log in indexerEl.listIndexerLogs) {
+                        errorIndexerLogs += "<strong>uid</strong> : &nbsp;" + log.uid +
+                            "  &nbsp;&nbsp;";
+                        errorIndexerLogs += "<strong>Error</strong> : &nbsp;" + log.action +
+                            "&nbsp;&nbsp; " + log.errorDocLog + " <br> ";
+                    }
+
+                $("#logHeader_" + indexerEl.indexerName).html(headerInfosIndexer);
+                $("#log_" + indexerEl.indexerName).html(errorIndexerLogs);
+                }
+
+            })
+
+
+
+        });
+
+        $("#General_logs").removeClass('hide');
+        headerInfosIndexers = "";
+        const percent = (response[0].numberOfItemsProcessed / response[0].numberOfItemsToProcess) * 100;
+        headerInfosIndexers += "<strong> Duration of Treatment </strong> : " + response[0].treatmentDurationMs +
+            " ms <br>";
+        headerInfosIndexers += "<strong> Number Of Items To Process </strong> : " + response[0].numberOfItemsToProcess +
+            " <br>";
+        headerInfosIndexers += "<strong> Number Of Items Processed </strong> : " + response[0].numberOfItemsProcessed +
+            " <br>";
+        headerInfosIndexers += "<strong> Percent of Avancement </strong> : " + Math.floor(percent) + " %<br>";
+        if (response[0].numberOfItemsFailed > 0) {
+            headerInfosIndexers += "<strong>Number Of Errors</strong> : &nbsp;" + response[0].numberOfItemsFailed +
+                "&nbsp;&nbsp; <br> ";
+        }
+        isIndexing = response[0].isIndexing;
+        if (!isIndexing)
+        {
+            $('.indexation_action').attr("disabled", false);
+            $("#progressBar").addClass('hide');
+            $("#loader").addClass('hide');
+            $("#alert_success_indexation").removeClass("hide")
+        }
+
+        $("#prog-bar").width(percent + "%");
+        $("#prog-bar").attr("aria-valuenow", percent);
+        $("#prog-bar").text(Math.floor(percent) + "%");
+        $("#General_logs").html(headerInfosIndexers);
+    }
+
+    function pause(time){
+        var start = new Date().getTime();
+                for (var i = 0; i < 1e7; i++) 
+                {
+                    if ((new Date().getTime() - start) > time){
+                    break;
+                    }
+                }
+    }
+
+</script>
+<style>
+    .hide {
+        display: none;
+    }
+
+    .log {
+        padding: 10px;
+        max-height: 150px;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+
+    .log span {
+        display: block;
+    }
+
+    #General_logs {
+        padding: 10px;
+        max-height: 150px;
+        overflow-x: hidden;
+        overflow-y: auto;
+        border-width: 1px;
+        border-color: black;
+    }
+</style>
