--- a/webapp/WEB-INF/templates/admin/system/config_properties.html
+++ b/webapp/WEB-INF/templates/admin/system/config_properties.html
@@ -80,8 +80,8 @@ mail.daemon.retryonerror.waittime=60
 mail.daemon.retryonerror.waittime.unit=SECONDS
 
 ################################################################################
-# Indexation (total->true or incremental->false)
-indexer.param.total=false
+# Indexation (total->FULL or incremental->INCREMENTAL_BY_BULK)
+indexer.param.total=INCREMENTAL_BY_BULK
 
 ################################################################################
 # Properties files
@@ -151,7 +151,7 @@ log4j.logger.lutece.jpa=INFO, JPA
 log4j.logger.org.hibernate=INFO, JPA
 log4j.logger.org.springframework.orm.jpa=INFO, JPA
 log4j.logger.org.springframework.transaction=INFO, JPA
-log4j.logger.lutece.indexer=ERROR, Indexer
+log4j.logger.lutece.indexer=DEBUG, Indexer
 log4j.logger.org.apache.tika=ERROR, Indexer
 
 ########                       A P P E N D E R S                       #########                            
@@ -225,7 +225,7 @@ log4j.appender.Indexer.File=${webapp_home}/WEB-INF/logs/indexer.log
 log4j.appender.Indexer.Append=true
 log4j.appender.Indexer.layout=org.apache.log4j.PatternLayout
 log4j.appender.Indexer.layout.ConversionPattern=%d{dd/MM/yy HH:mm:ss} %-5p [%t] %c{2} - %m%n
-log4j.appender.Indexer.MaxFileSize=1000KB
+log4j.appender.Indexer.MaxFileSize=10000KB
 log4j.appender.Indexer.MaxBackupIndex=5
 
 # Console
